# CLI-snake

./: .gitignore  LICENSE  README.md  pyproject.toml  setup_jsnake.py
.github/workflows/: ci.yml
src/jsnake/: __init__.py  __main__.py  engine.py  main.py  models.py  tui.py
tests/: test_game.py  test_package.py
